ECA-8086: Fix some warnings from PMD/Checkstyle/Findbugs
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@32501 37aeb1de-b14b-0410-9a0e-82b28170d228